# schedule-kit

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
example/: __init__.py  admin.py  celery.py  filters.py  models.py  serializers.py  services.py  settings.py  tasks.py  urls.py  views.py
example/management/commands/: create_e2e_user.py  seed_data.py
example/migrations/: 0001_initial.py  0002_asyncalerttask.py  0002_rename_title_alertruletask_name_and_more.py  0003_alter_alertruletask_task_and_more.py
mds/: base_model.md  execution_cycle.md  integration.md  record_flow.md  settings.md  task_flow.md
plain/: base_model.md  execution.md  plain.md  serializer.md  setup.md  sync.md
scripts/: README.md  list_executions.sh  list_schedules.sh
src/schedule_kit/: __init__.py  api.py  apps.py  conf.py  decorators.py  exceptions.py  filters.py  signals.py
src/schedule_kit/migrations/: 0001_initial.py  0002_executionrecord_celery_task_id.py  0002_executionrecord_occurred_at.py
src/schedule_kit/models/: __init__.py  base.py  execution.py
src/schedule_kit/serializers/: __init__.py  base.py  execution.py
src/schedule_kit/services/: __init__.py  sync.py
src/schedule_kit/tasks/: __init__.py  maintenance.py
src/schedule_kit/utils/: cron.py  schedule.py
src/schedule_kit/views/: __init__.py  execution.py
tests/: README.md  conftest.py  settings.py  test.md  test_cron.py  test_maintenance.py  test_serializer.py  test_sync.py  test_views.py
tests/e2e/: conftest.py  test_async.py  test_crud.py  test_execution.py
tests/mock_agent/: server.py
(+2 files in other folders)
